<resources>
    <string name="app_name">Instagram Project</string>

    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="network_login_again">Please log in again</string>

    <!--login-->
    <string name="email_field_hint">Enter your email</string>
    <string name="password_field_hint">Enter your password</string>
    <string name="email_field_empty">Email can\'t be empty</string>
    <string name="password_field_empty">Password can\'t be empty</string>
    <string name="email_field_invalid">Not a valid email</string>
    <string name="password_field_small_length">Password less than 6 digits</string>
    <string name="login_button_text">Login</string>

    <!--signup-->
    <string name="name_field_hint">Enter your name</string>
    <string name="login_with_email_text">Login with Email</string>
    <string name="signup_with_email_text">Signup with Email</string>
    <string name="name_field_empty">Username can\'t be empty</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="menu_home">Home</string>
    <string name="menu_photo">Add Photos</string>
    <string name="menu_profile">Profile</string>
    <string name="post_like_label">%1d likes</string>
    <string name="label_edit_profile">Edit Profile</string>
    <string name="update_successful">Profile Update Successfully</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="try_again">Try Again</string>


</resources>
